tests/cmp/dc-label-wrong-brackets.golden
Parse Error:
tests/cmp/dc-label-wrong-brackets.trp:1:25 unexpected token TokenLt
